# rag-pdf-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: chat_logic.py  main.py  utils.py  vectorstore.py
